# nextjs-fastapi-template

./: .editorconfig  .gitignore  .pre-commit-config.docker.yaml  .pre-commit-config.yaml  404.html  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  GEMINI.md  Makefile  README.md  SECURITY.md  docker-compose-dev.yml  docker-compose.yml  index.html  mkdocs.yml  prod-api-deploy.yml  prod-ui-deploy.yml  sitemap.xml
.github/: CODEOWNERS  dependabot.yml
.github/codeql/: api-codeql-config.yml  ui-codeql-config.yml
.github/workflows/: api-ci.yml  api-codeql.yml  api-container-build-push.yml  api-lint.yml  api-security.yml  api-tests.yml  ci.yml  conventional-commit.yml  coveralls.yml  docs.yml  lint.yml  pre-commit.yml  release.yml  ui-ci.yml  ui-codeql.yml  ui-container-build-push.yml  ui-lint.yml  ui-tests.yml
CHANGELOG/: index.html
CODE_OF_CONDUCT/: index.html
SECURITY/: index.html
additional-settings/: index.html
api/: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  GEMINI.md  README.md  mypy.ini  pyproject.toml  requirements.txt  vercel.json  watcher.py
api/alembic_migrations/: env.py
api/alembic_migrations/versions/: 402d067a8b92_added_user_table.py  c384314bdd22_remove_deleted_items_table.py
api/app/: main.py
api/app/api/v1/: router.py
api/app/core/: config.py  database.py  email.py  users.py
api/app/email_templates/: password_reset.html
api/app/modules/users/: manager.py  models.py  router.py  schemas.py  service.py
api/commands/: generate_openapi_schema.py
api/tests/: conftest.py  test_database.py  test_email.py
api/tests/commands/: test_generate_openapi_schema.py
api/tests/commands/files/: openapi_test.json  openapi_test_output.json
api/tests/core/: test_database.py  test_email.py  test_utils.py
api/tests/modules/users/: test_router.py  test_service.py
contributing/: index.html
deployment/: index.html
docs/: additional-settings.md  contributing.md  deployment.md  extending-template.md  get-started.md  support.md  technology-selection.md
docs/stylesheets/: extra.css
extending-template/: index.html
fastapi_backend/: .gitignore  Dockerfile  pyproject.toml  requirements.txt  start.sh  vercel.prod.json
fastapi_backend/alembic_migrations/versions/: 402d067a8b92_added_user_table.py
fastapi_backend/app/: main.py
fastapi_backend/app/api/v1/endpoints/: items.py
fastapi_backend/app/core/: database.py  email.py  users.py
fastapi_backend/app/models/: __init__.py  item.py  user.py
fastapi_backend/app/schemas/: __init__.py  item.py
fastapi_backend/commands/: generate_openapi_schema.py
fastapi_backend/tests/: conftest.py  test_database.py  test_email.py
fastapi_backend/tests/main/: test_main.py
fastapi_backend/tests/routes/: test_items.py
fastapi_backend/tests/utils/: test_utils.py
get-started/: index.html
local-shared-data/: openapi.json
nextjs-frontend/: .biomeignore  .dockerignore  .gitignore  Dockerfile  biome.json  next.config.mjs  openapi.json  package.json  pnpm-lock.yaml  proxy.ts  tsconfig.json  vitest.config.ts
nextjs-frontend/__tests__/: login.test.tsx  loginPage.test.tsx  passwordReset.test.tsx  passwordResetConfirm.test.tsx  passwordResetConfirmPage.test.tsx  passwordResetPage.test.tsx  register.test.ts  registerPage.test.tsx
nextjs-frontend/app/: page.tsx
nextjs-frontend/components/: page-pagination.tsx  page-size-selector.tsx
overrides/: main.html
search/: search_index.json
skills/: setup.sh  setup_test.sh
skills/api-design-principles/: SKILL.md
skills/fastapi-expert/: SKILL.md
skills/fastapi-templates/: SKILL.md
skills/next-best-practices/: SKILL.md
skills/postgresql-table-design/: SKILL.md
skills/programmatic-seo/: SKILL.md
skills/pytest/: SKILL.md
skills/python-performance-optimization/: SKILL.md
skills/react-hook-form-zod/: SKILL.md
support/: index.html
technology-selection/: index.html
ui/: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  GEMINI.md  README.md  biome.json  next.config.mjs  openapi-ts.config.ts  openapi.json  package.json  pnpm-lock.yaml  proxy.ts  tsconfig.json  vitest.config.ts  watcher.js
(+68 files in other folders)
